# CudaFEMproject

./: .README.md.swp  .gitignore  .gitmodules  L2norm.py  LICENSE  README.md  fem_parser.py  parser.py  postprocessing.py  prepare.py  run_fem.py  run_tests.py
FEMproject/: CMakeLists.txt
FEMproject/CudaLib/: CMakeLists.txt
FEMproject/CudaLib/include/: init.h
FEMproject/CudaLib/src/: init.cu
FEMproject/DataKeeper/: CMakeLists.txt
FEMproject/DataKeeper/src/: datakeeper.cpp  datakeeper.h
FEMproject/DataKeeper/src2D/: datakeeper.cpp  datakeeper.h
FEMproject/Linal2/: CMakeLists.txt
FEMproject/Linal2/src/: Linal2.cpp  Linal2.h
FEMproject/Parser/: CMakeLists.txt
FEMproject/Parser/src/: Parser.cpp  Parser.h
FEMproject/Tests/: CMakeLists.txt
FEMproject/Tests/src/: tests.cpp  tests.h
FEMproject/Tools/: CMakeLists.txt
FEMproject/Tools/src/: Tools.cpp  Tools.h
FEMproject/VTKfile/: CMakeLists.txt
FEMproject/VTKfile/src/: VTKfile.cpp  VTKfile.h
FEMproject/VTKfile/src2D/: VTKfile.cpp  VTKfile.h
FEMproject/fem/: CMakeLists.txt
FEMproject/fem/src/: main.cpp
FEMproject/fem_utils/: CMakeLists.txt
FEMproject/fem_utils/include/: fem_utils.h  fem_utils_cpu.h
FEMproject/fem_utils/include/cu/: cuda_fem_utils.h  fem_utils_kernels.h
FEMproject/fem_utils/include/cuda_fem_utils/: cuda_fem_utils.h  fem_utils_kernels.h
FEMproject/fem_utils/include/fem_utils/: fem_utils.h
FEMproject/fem_utils/src/: cpu_fem_utils.cpp  fem_utils.cpp
FEMproject/fem_utils/src/cu/: cuda_fem_utils.cpp  fem_utils_kernels.cu
FEMproject/fem_utils/test/: test_fem_utils.cpp
FEMproject/femfunc/: CMakeLists.txt
FEMproject/femfunc/src/: femfunc.cpp  femfunc.h
FEMproject/femfunc/src2D/: femfunc.cpp  femfunc.h
FEMproject/femstruct/: CMakeLists.txt
FEMproject/femstruct/src/: femstruct.cpp  femstruct.h
FEMproject/femstruct/src2D/: femstruct.cpp  femstruct.h
FEMproject/matrix_pack/: CMakeLists.txt
FEMproject/matrix_pack/include/: matrix_pack.h  matrix_pack_cpu.h
FEMproject/matrix_pack/include/cu/: cuda_matrix.h
FEMproject/matrix_pack/include/cuda_matrix_pack/: cuda_matrix.h  matrix_kernels.h
FEMproject/matrix_pack/include/matrix_pack/: matrix_pack.h
FEMproject/matrix_pack/include/matrix_pack_cuda/: gpu_matrix.h  matrix_kernels.h
FEMproject/matrix_pack/src/: cpu_matrix.cpp  matrix_pack.cpp
FEMproject/matrix_pack/src/cu/: cuda_matrix.cpp  gpu_matrix.cpp  matrix_kernels.cu
FEMproject/matrix_pack/test/: test_matrix_pack.cpp
FEMproject/segyUtils/: CMakeLists.txt
FEMproject/segyUtils/src/: segyUtils.cpp  segyUtils.h
FEMproject/testing/: CMakeLists.txt
FEMproject/testing/src/: testing.cpp
Fidesys_results/bulk_test/: A.txt  B.vec  bulk_test.k
configs/: run_config.json  run_config3D.json  run_config3D_dyn.json  run_config3D_dyn_explicit.json  run_config_dyn.json  run_config_dyn_test.json  run_config_implicit_dyn.json  run_config_implicit_prak.json  run_config_implicit_quasi1Dwave_taller.json  run_config_prak.json  run_config_quasi1Dwave.json  run_config_quasi1Dwave_taller.json  test.sgy  test_config.json
deprecated/CudaLib/: CMakeLists.txt
deprecated/CudaLib/include/: init.h
deprecated/CudaLib/src/: init.cu
deprecated/Linal2/: CMakeLists.txt
deprecated/femfunc/: femfunc.cpp  femfunc.h
final_results/3D/: results.vtk
final_results/bulk_small/: results.vtk
final_results/bulk_test/: results.vtk
final_results/cilinder_middle/: results.vtk
mesh_parser_lib/: fem_parser.py  file_parser.py  parser.py
mesh_parser_lib/parser_src/: parser_lib.py
postprocessing/: L2norm.py  postprocessing.py
prak_results/: out_stress_ 9task80.txt  out_stress_ task7_2.txt  out_stress_ task7_denser_2.txt  out_stress_ task7_int10_factor20_2.txt  out_stress_ task7_int25_factor20_2.txt
prak_results/tmp/: out_stress_ task7.txt  out_stress_ task7_denser.txt  out_stress_ task7_int10_factor20.txt  out_stress_ task7_int25_factor20.txt
prepare_mesh_lib/: file_reader.py
prepared_meshes/bulk/: constraints.txt  loads.txt
prepared_meshes/bulk_middle/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/bulk_small/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/bulk_task/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/bulk_test/: constraints.txt  elements.txt  loads.txt  mke_express_3D.py  nodes.txt
prepared_meshes/cilinder/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/cilinder_middle/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/cube/: constraints.txt  elements.txt
prepared_meshes/cube_small/: constraints.txt  loads.txt
prepared_meshes/cube_test/: loads.txt  nodes.txt
prepared_meshes/large_bulk/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/piramida_small/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/plastinka1/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/plastinka_small/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/rect/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/result1/: constraints.txt  elements.txt  nodes.txt
prepared_meshes/sphere_small/: elements.txt  loads.txt  nodes.txt
prepared_meshes/super_large_bulk/: constraints.txt  loads.txt  nodes.txt
prepared_meshes/test/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/test_bulk/: constraints.txt  elements.txt  loads.txt  nodes.txt
prepared_meshes/test_mesh/: elements.txt  nodes.txt
prepared_meshes/tor/: elements.txt  loads.txt  nodes.txt
raw_meshes/: bulk.k  bulk_middle.k  bulk_small.k  bulk_task.k  cilinder.k  cilinder_middle.k  cube.k  cube_small.k  cube_test.k  piramida_small.k  plastinka1.k  plastinka_small.k  result1.k  sphere_small.k
raw_meshes/2D/: 9task_3.k  9task_4.k  9task_5.k  9task_6.k  9task_fem.k  Kirsh_grisha.k  Kirsh_grisha2.k  load1vector2030.k  point_source.k  point_source2.k  prak_mesh1.k  pressure_test.k  quasi1Dwave.k  quasi1Dwave_taller.k  quasi1Dwave_taller_M10.k  rect.k  result1.k  task7.k  task7_denser.k  (+6 more)
(+167 files in other folders)
