cmake_minimum_required(VERSION 3.5)

project(FemProject)

option(TOOLS_TIMER CACHED ON)
option(FEM3D CACHED OFF)
option(SMOOTH CACHED OFF)
option(MISES CACHED OFF)
option(PRINT_DEBUG_INFO ON)

if (PRINT_DEBUG_INFO)
    add_definitions(-DPRINT_DEBUG_INFO=true)
else()
    add_definitions(-DPRINT_DEBUG_INFO=false)
endif()

if (SMOOTH)
    add_definitions(-DSMOOTH=true)
else()
    add_definitions(-DSMOOTH=false)
endif()

if (MISES)
    add_definitions(-DMISES=true)
else()
    add_definitions(-DMISES=false)
endif()

if (TOOLS_TIMER)
    add_definitions(-DTOOLS_TIMER)
endif()

if (FEM3D)
    add_definitions(-DDIM=3)
else ()
    add_definitions(-DDIM=2)
endif()

add_subdirectory(Linal2)
add_subdirectory(fem)
add_subdirectory(VTKfile)
add_subdirectory(femfunc)
add_subdirectory(Datakeeper)
add_subdirectory(Tools)
add_subdirectory(CudaLib)
add_subdirectory(femstruct)
add_subdirectory(Tests)
add_subdirectory(testing)
