cmake_minimum_required(VERSION 3.5)

project(FemProject)

option(TOOLS_TIMER CACHED ON)
option(SMOOTH CACHED OFF)
option(MISES CACHED OFF)
option(STRESS_ALONG_AXIS OFF)

if (STRESS_ALONG_AXIS)
    add_definitions(-DSTRESS_ALONG_AXIS=true)
else()
    add_definitions(-DSTRESS_ALONG_AXIS=false)
endif()

if (SMOOTH)
    add_definitions(-DSMOOTH=true)
else()
    add_definitions(-DSMOOTH=false)
endif()

if (MISES)
    add_definitions(-DMISES=true)
else()
    add_definitions(-DMISES=false)
endif()

if (TOOLS_TIMER)
    add_definitions(-DTOOLS_TIMER)
endif()

add_subdirectory(Linal2)
add_subdirectory(fem)
add_subdirectory(VTKfile)
add_subdirectory(femfunc)
add_subdirectory(Datakeeper)
add_subdirectory(Tools)
add_subdirectory(CudaLib)
add_subdirectory(femstruct)
add_subdirectory(testing)
add_subdirectory(matrix_pack)
#add_subdirectory(oneApiLib)
